--- a/demo.html
+++ b/demo.html
@@ -11,7 +11,7 @@
       function setBackgroundColor() {
         var env = "dev";
         var feature_toggle_name = "toggle_1"
-        var url = `http://localhost:4000/api/switches?user_id=guido&user_source=flatmates&feature_toggle_name=${feature_toggle_name}&feature_toggle_env=${env}`;
+        var url = `http://localhost:4000/api/v1/switches?user_id=guido&user_source=flatmates&feature_toggle_name=${feature_toggle_name}&feature_toggle_env=${env}`;
         $.ajax({
           url: url,
           success: function(data, status) {
