--- a/demo.html
+++ b/demo.html
@@ -31,6 +31,12 @@
         });
       }
     </script>
+    <style>
+      body {
+        color: #FFF;
+        background-color: #313a48;
+      }
+    </style>
   </head>
   <body onload="setBackgroundColor();">
     <br>
@@ -44,7 +50,7 @@
       </div>
       <div class="row">
         <div class="col-sm" id="env-wrapper">
-          "<i id="featureToggleLabel"></i>" ➡️ <span id="activeFeatureToggle"></span>
+          "<i id="featureToggleLabel"></i>" status: <strong><span id="activeFeatureToggle"></span></strong>
         </div>
       </div>
     </div>
